# covid19-instagram-sentiment-analysis

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: config.yaml
data/: README.md
notebooks/: covid19_sentiment_analysis.ipynb
scripts/: generate_figures.py
src/: __init__.py  data_loader.py  preprocessing.py  sentiment_analyzer.py  utils.py  visualization.py
tests/: __init__.py  test_analyzer.py
