[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "covid19-instagram-sentiment"
version = "1.0.0"
description = "Multilingual sentiment analysis of COVID-19 discourse on Instagram"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Tharun Ponnam", email = "tharunponnam007@gmail.com"}
]
maintainers = [
    {name = "Tharun Ponnam", email = "tharunponnam007@gmail.com"}
]
keywords = [
    "sentiment-analysis",
    "nlp",
    "covid-19",
    "instagram",
    "social-media",
    "multilingual",
    "text-analysis",
    "data-science"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "nltk>=3.6.0",
    "pyyaml>=5.4.0",
    "tqdm>=4.62.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "isort>=5.9.0",
    "jupyter>=1.0.0"
]
multilingual = [
    "langdetect>=1.0.9"
]
visualization = [
    "wordcloud>=1.8.0",
    "plotly>=5.3.0"
]
deep_learning = [
    "tensorflow>=2.6.0",
    "transformers>=4.10.0"
]

[project.urls]
Homepage = "https://github.com/tharun-ship-it/covid19-instagram-sentiment-analysis"
Documentation = "https://github.com/tharun-ship-it/covid19-instagram-sentiment-analysis#readme"
Repository = "https://github.com/tharun-ship-it/covid19-instagram-sentiment-analysis"
Issues = "https://github.com/tharun-ship-it/covid19-instagram-sentiment-analysis/issues"

[project.scripts]
covid-sentiment = "src.sentiment_analyzer:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "notebooks*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | notebooks
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".git", ".venv", "venv", "build", "dist"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "*/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
